Avoid crash when clearing text pipe brushtip text

BUG:504781